# Terraria-Clone

./: CMakeLists.txt
src/: main.cpp
src/gameLayer/: assetManager.cpp  assetManager.h  blocks.h  gameMain.cpp  gameMain.h  gameMap.cpp  gameMap.h  helpers.cpp  helpers.h  randomStuff.cpp  randomStuff.h  renderer.cpp  renderer.h  saveMap.cpp  saveMap.h  structure.cpp  structure.h  tile.h  worldGenerator.cpp  worldGenerator.h  wormGenerator.cpp  wormGenerator.h
src/platform/: main.cpp
